feat: cglib 활용하여 configuration, bean 기능 지원(프록시로 싱글톤 유지 + 해당 인스턴스 생성 및 관리)